<resources>
    <string name="app_name">HelpNearbyMobile</string>
    <string name="n_n">Добро пожаловать в наше приложение!\n Кто Вы: волонтёр или нуждающийся?\n Выберите свою роль и дарите добро другим.</string>
    <string name="imv_text">Я волонтёр</string>
    <string name="imn_text">Я нуждающийся</string>
    <string name="city">Город</string>
    <string name="_a">------</string>
    <string name="address">Адрес</string>
    <string name="need_help_txt">Нужна помощь!</string>
    <string name="need_lelp_comment_hint">Комментарий</string>
    <string name="change_link">Изменить</string>
    <string name="choose_city">Введите город</string>
    <string name="choose_address">Введите адрес</string>
    <string name="change">Изменить</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="optional_hint">* опционально</string>
    <string name="msg_token_fmt">FIX ME %s</string>
    <string name="login_hint_txt">Логин</string>
    <string name="orderdata_key">orderData</string>
    <string name="order_sent_text">Заявка отправлена</string>
    <string name="error">Ошибка</string>
    <string name="not_accepted">Не принят</string>
    <string name="shared_prefs_key_order">order</string>
    <string name="connection_error">Соединение не установлено</string>
    <string name="connected">Соединено с сервером</string>
</resources>