<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:padding="30dp">
    <EditText
        android:textColor="@color/black"
        android:background="@drawable/edit_text_style"
        android:hint="@string/choose_city"
        android:padding="15dp"
        android:textColorHint="@color/gray"
        android:id="@+id/city_name_change_input"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="parent" />
    <EditText
        android:textColor="@color/black"
        android:layout_marginTop="30dp"
        android:background="@drawable/edit_text_style"
        android:height="50dp"
        android:hint="@string/choose_address"
        android:textColorHint="@color/gray"
        android:padding="15dp"
        android:id="@+id/address_change_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/city_name_change_input"/>

    <Button
        android:id="@+id/change_btn"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:background="@drawable/im_needler_btn"
        app:layout_constraintTop_toBottomOf="@id/address_change_input"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="35dp"
        android:text="@string/change"/>

</androidx.constraintlayout.widget.ConstraintLayout>