<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.WelcomeActivity"
    android:background="@color/white">
    <TextView
        android:alpha="0"
        android:id="@+id/welcome_text_view"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/n_n"
        android:textAlignment="center"
        android:textSize="16sp"
        android:shadowColor="@color/secondary_color"
        android:shadowDy="5"
        android:shadowDx="5"
        android:layout_marginBottom="50dp"
        style="@style/welcome_text_style"/>
    <LinearLayout
        android:alpha="0"
        android:id="@+id/btns_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/welcome_text_view">
        <Button
            android:id="@+id/imv_btn"
            android:layout_weight="1"
            android:background="@drawable/im_volonteur_btn"
            android:shadowColor="@color/black"
            android:shadowDx="10"
            android:shadowDy="10"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:text="@string/imv_text"
            android:layout_margin="20dp"/>
        <Button
            android:id="@+id/imn_btn"
            android:layout_weight="1"
            android:background="@drawable/im_needler_btn"
            android:shadowColor="@color/black"
            android:shadowDx="10"
            android:shadowDy="10"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:text="@string/imn_text"
            android:layout_margin="20dp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>